load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "parser_lib",
    srcs = [
        "intel_hex_parser.go",
        "main.go",
    ],
    importpath = "github.com/mihaigalos/intel_hex_parser/parser",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "parser",
    embed = [":parser_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "parser_test",
    srcs = [
        "unit_exceptions_test.go",
        "unit_typical_test.go",
    ],
    embed = [":parser_lib"],
)
