load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "src_lib",
    srcs = [
        "intel_hex_parser.go",
        "main.go",
    ],
    importpath = "github.com/mihaigalos/intel-hex-parser/src",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "src",
    embed = [":src_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "src_test",
    srcs = [
        "unit_exceptions_test.go",
        "unit_typical_test.go",
    ],
    embed = [":src_lib"],
)
